feat: faz com que o bytecodeanalize agora analise o código em sí e não o binário.